--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ bolton-clack==0.3.1
 bolton-eris==0.2.2
     # via
     #   bolton-clack
-    #   todotxt-python
+    #   magodo
 bolton-ion==0.1.0
     # via bolton-eris
 bolton-logrus==0.1.0
@@ -24,14 +24,14 @@ bolton-typist==0.1.2
     # via
     #   bolton-clack
     #   bolton-eris
-    #   todotxt-python
+    #   magodo
+magodo==0.4.1
+    # via -r requirements.in
 pydantic==1.9.0
     # via bolton-clack
 pyyaml==6.0
     # via bolton-clack
 structlog==21.5.0
     # via bolton-logrus
-todotxt-python==0.3.1
-    # via -r requirements.in
 typing-extensions==4.0.1
     # via pydantic
