--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,11 +22,11 @@ binaryornot==0.4.4
     # via cookiecutter
 black==21.12b0
     # via -r requirements-dev.in
-bolton-clack==0.3.1
+bolton-clack==0.3.2
     # via
     #   -r requirements.in
     #   greatday
-bolton-eris==0.2.2
+bolton-eris==0.2.3
     # via
     #   bolton-clack
     #   magodo
@@ -41,7 +41,8 @@ bolton-metaman==0.1.1
     # via
     #   bolton-eris
     #   bolton-logrus
-bolton-typist==0.1.2
+    #   magodo
+bolton-typist==0.2.0
     # via
     #   bolton-clack
     #   bolton-eris
@@ -111,7 +112,7 @@ lazy-object-proxy==1.7.1
     # via astroid
 m2r2==0.3.2
     # via -r requirements-dev.in
-magodo==0.4.1
+magodo==0.5.1
     # via
     #   -r requirements.in
     #   greatday
@@ -229,7 +230,7 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 structlog==21.5.0
     # via bolton-logrus
-syrupy==1.5.0
+syrupy==1.7.0
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
