--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -30,6 +30,7 @@ bolton-eris==0.2.3
     # via
     #   bolton-clack
     #   magodo
+    #   potoroo
 bolton-ion==0.1.0
     # via bolton-eris
 bolton-logrus==0.1.0
@@ -151,6 +152,10 @@ pluggy==1.0.0
     # via
     #   pytest
     #   tox
+potoroo==0.2.1
+    # via
+    #   -r requirements.in
+    #   greatday
 poyo==0.5.0
     # via cookiecutter
 py==1.11.0
