--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -113,7 +113,7 @@ lazy-object-proxy==1.7.1
     # via astroid
 m2r2==0.3.2
     # via -r requirements-dev.in
-magodo==0.6.0
+magodo==0.7.0
     # via
     #   -r requirements.in
     #   greatday
@@ -215,6 +215,8 @@ snowballstemmer==2.2.0
 sphinx==4.3.2
     # via
     #   -r requirements-dev.in
+    #   -r requirements.in
+    #   greatday
     #   sphinx-autodoc-typehints
     #   sphinx-rtd-theme
 sphinx-autodoc-typehints==1.15.2
