--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@
     # via -r requirements-dev.in
 alabaster==0.7.12
     # via sphinx
-arrow==1.2.1
+arrow==1.2.2
     # via jinja2-time
 astroid==2.9.3
     # via pylint
@@ -20,7 +20,7 @@ babel==2.9.1
     # via sphinx
 binaryornot==0.4.4
     # via cookiecutter
-black==21.12b0
+black==22.1.0
     # via -r requirements-dev.in
 bolton-clack==0.3.2
     # via
@@ -57,7 +57,7 @@ certifi==2021.10.8
     # via requests
 chardet==4.0.0
     # via binaryornot
-charset-normalizer==2.0.10
+charset-normalizer==2.0.11
     # via requests
 click==8.0.3
     # via
@@ -72,7 +72,7 @@ colored==1.4.3
     # via syrupy
 cookiecutter==1.7.3
     # via cruft
-coverage[toml]==6.2
+coverage[toml]==6.3.1
     # via pytest-cov
 cruft[pyproject]==2.10.1
     # via -r requirements-dev.in
@@ -116,7 +116,7 @@ lazy-object-proxy==1.7.1
     # via astroid
 m2r2==0.3.2
     # via -r requirements-dev.in
-magodo==0.7.0
+magodo==0.7.1
     # via
     #   -r requirements.in
     #   greatday
@@ -144,7 +144,7 @@ pathspec==0.9.0
     # via black
 pep517==0.12.0
     # via pip-tools
-pip-tools==6.4.0
+pip-tools==6.5.0
     # via -r requirements-dev.in
 platformdirs==2.4.1
     # via
@@ -187,7 +187,7 @@ pytest==6.2.5
     #   syrupy
 pytest-cov==3.0.0
     # via -r requirements-dev.in
-pytest-mock==3.6.1
+pytest-mock==3.7.0
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via arrow
@@ -220,7 +220,7 @@ sphinx==4.3.2
     #   -r requirements-dev.in
     #   sphinx-autodoc-typehints
     #   sphinx-rtd-theme
-sphinx-autodoc-typehints==1.15.3
+sphinx-autodoc-typehints==1.16.0
     # via -r requirements-dev.in
 sphinx-rtd-theme==1.0.0
     # via -r requirements-dev.in
@@ -238,7 +238,7 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 structlog==21.5.0
     # via bolton-logrus
-syrupy==1.7.0
+syrupy==1.7.3
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
@@ -249,7 +249,7 @@ toml==0.10.2
     #   pylint
     #   pytest
     #   tox
-tomli==1.2.3
+tomli==2.0.0
     # via
     #   black
     #   coverage
@@ -273,7 +273,7 @@ typing-extensions==4.0.1
     #   pylint
 urllib3==1.26.8
     # via requests
-virtualenv==20.13.0
+virtualenv==20.13.1
     # via tox
 wheel==0.37.1
     # via pip-tools
@@ -283,9 +283,9 @@ zipp==3.7.0
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
-pip==21.3.1
+pip==22.0.3
     # via pip-tools
-setuptools==60.5.0
+setuptools==60.7.1
     # via
     #   astroid
     #   pip-tools
