--- a/requirements.txt
+++ b/requirements.txt
@@ -33,14 +33,22 @@ bolton-typist==0.2.0
     #   bolton-eris
     #   magodo
     #   vimala
+colorama==0.4.4
+    # via rich
+commonmark==0.9.1
+    # via rich
 magodo==0.8.0
     # via -r requirements.in
 potoroo==0.3.2
     # via -r requirements.in
 pydantic==1.9.0
     # via bolton-clack
+pygments==2.11.2
+    # via rich
 pyyaml==6.0
     # via bolton-clack
+rich==11.2.0
+    # via -r requirements.in
 structlog==21.5.0
     # via bolton-logrus
 typing-extensions==4.0.1
