--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -72,12 +72,8 @@ click==8.0.3
     #   typer
 cogapp==3.3.0
     # via -r requirements-dev.in
-colorama==0.4.4
-    # via rich
 colored==1.4.3
     # via syrupy
-commonmark==0.9.1
-    # via rich
 cookiecutter==1.7.3
     # via cruft
 coverage[toml]==6.3.1
@@ -182,9 +178,7 @@ pydocstyle[toml]==6.1.1
 pyflakes==2.4.0
     # via flake8
 pygments==2.11.2
-    # via
-    #   rich
-    #   sphinx
+    # via sphinx
 pylint==2.12.2
     # via -r requirements-dev.in
 pyparsing==3.0.7
@@ -211,10 +205,6 @@ requests==2.27.1
     # via
     #   cookiecutter
     #   sphinx
-rich==11.2.0
-    # via
-    #   -r requirements.in
-    #   greatday
 setuptools-scm==6.4.2
     # via -r requirements-dev.in
 six==1.16.0
