--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -194,7 +194,10 @@ pytest-cov==3.0.0
 pytest-mock==3.7.0
     # via -r requirements-dev.in
 python-dateutil==2.8.2
-    # via arrow
+    # via
+    #   -r requirements.in
+    #   arrow
+    #   greatday
 python-slugify==5.0.2
     # via cookiecutter
 pytz==2021.3
