--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -16,6 +16,9 @@ mypy != 0.920, != 0.921, != 0.930  # workaround for https://github.com/samuelcol
 pydocstyle[toml]
 pylint
 
+### TYPES
+types-python-dateutil
+
 ### Docs
 m2r2
 sphinx != 4.4.*  # ATTOW, 'sphinx==4.4.0' requires a 'importlib-metadata' version that conflicts with what 'cruft' requires.
