--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -271,6 +271,8 @@ tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.4.0
     # via cruft
+types-python-dateutil==2.8.9
+    # via -r requirements-dev.in
 typing-extensions==4.1.1
     # via
     #   astroid
