--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,7 +10,7 @@ alabaster==0.7.12
     # via sphinx
 arrow==1.2.2
     # via jinja2-time
-astroid==2.9.3
+astroid==2.11.2
     # via pylint
 attrs==21.4.0
     # via
@@ -20,7 +20,7 @@ babel==2.9.1
     # via sphinx
 binaryornot==0.4.4
     # via cookiecutter
-black==22.1.0
+black==22.3.0
     # via -r requirements-dev.in
 bolton-clack==0.3.2
     # via
@@ -63,7 +63,7 @@ chardet==4.0.0
     # via binaryornot
 charset-normalizer==2.0.12
     # via requests
-click==8.0.4
+click==8.1.2
     # via
     #   black
     #   cookiecutter
@@ -80,6 +80,8 @@ coverage[toml]==6.3.2
     # via pytest-cov
 cruft[pyproject]==2.10.1
     # via -r requirements-dev.in
+dill==0.3.4
+    # via pylint
 distlib==0.3.4
     # via virtualenv
 docutils==0.17.1
@@ -109,7 +111,7 @@ isort==5.10.1
     # via
     #   -r requirements-dev.in
     #   pylint
-jinja2==3.0.3
+jinja2==3.1.1
     # via
     #   cookiecutter
     #   jinja2-time
@@ -124,7 +126,7 @@ magodo==0.9.0
     # via
     #   -r requirements.in
     #   greatday
-markupsafe==2.1.0
+markupsafe==2.1.1
     # via jinja2
 mccabe==0.6.1
     # via
@@ -132,7 +134,7 @@ mccabe==0.6.1
     #   pylint
 mistune==0.8.4
     # via m2r2
-mypy==0.931
+mypy==0.942
     # via -r requirements-dev.in
 mypy-extensions==0.4.3
     # via
@@ -179,11 +181,11 @@ pyflakes==2.4.0
     # via flake8
 pygments==2.11.2
     # via sphinx
-pylint==2.12.2
+pylint==2.13.4
     # via -r requirements-dev.in
 pyparsing==3.0.7
     # via packaging
-pytest==7.0.1
+pytest==7.1.1
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -200,7 +202,7 @@ python-dateutil==2.8.2
     #   greatday
 python-slugify==6.1.1
     # via cookiecutter
-pytz==2021.3
+pytz==2022.1
     # via babel
 pyyaml==6.0
     # via bolton-clack
@@ -253,7 +255,6 @@ toml==0.10.2
     # via
     #   cruft
     #   pydocstyle
-    #   pylint
     #   tox
 tomli==2.0.1
     # via
@@ -261,6 +262,7 @@ tomli==2.0.1
     #   coverage
     #   mypy
     #   pep517
+    #   pylint
     #   pytest
     #   setuptools-scm
 tox==3.24.5
@@ -269,9 +271,9 @@ tox==3.24.5
     #   tox-pyenv
 tox-pyenv==1.1.0
     # via -r requirements-dev.in
-typer==0.4.0
+typer==0.4.1
     # via cruft
-types-python-dateutil==2.8.9
+types-python-dateutil==2.8.10
     # via -r requirements-dev.in
 typing-extensions==4.1.1
     # via
@@ -280,25 +282,25 @@ typing-extensions==4.1.1
     #   mypy
     #   pydantic
     #   pylint
-urllib3==1.26.8
+urllib3==1.26.9
     # via requests
 vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.13.3
+virtualenv==20.14.0
     # via tox
 wheel==0.37.1
     # via pip-tools
-wrapt==1.13.3
+wrapt==1.14.0
     # via astroid
-zipp==3.7.0
+zipp==3.8.0
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 pip==22.0.4
     # via pip-tools
-setuptools==60.9.3
+setuptools==62.0.0
     # via
     #   astroid
     #   pip-tools
