--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,9 +13,7 @@ arrow==1.2.2
 astroid==2.11.2
     # via pylint
 attrs==21.4.0
-    # via
-    #   pytest
-    #   syrupy
+    # via pytest
 babel==2.9.1
     # via sphinx
 binaryornot==0.4.4
@@ -122,7 +120,7 @@ lazy-object-proxy==1.7.1
     # via astroid
 m2r2==0.3.2
     # via -r requirements-dev.in
-magodo==0.9.0
+magodo==0.9.1
     # via
     #   -r requirements.in
     #   greatday
@@ -150,9 +148,9 @@ pathspec==0.9.0
     # via black
 pep517==0.12.0
     # via pip-tools
-pip-tools==6.5.1
+pip-tools==6.6.0
     # via -r requirements-dev.in
-platformdirs==2.5.1
+platformdirs==2.5.2
     # via
     #   black
     #   pylint
@@ -181,9 +179,9 @@ pyflakes==2.4.0
     # via flake8
 pygments==2.11.2
     # via sphinx
-pylint==2.13.4
+pylint==2.13.5
     # via -r requirements-dev.in
-pyparsing==3.0.7
+pyparsing==3.0.8
     # via packaging
 pytest==7.1.1
     # via
@@ -229,7 +227,7 @@ sphinx==4.3.2
     #   -r requirements-dev.in
     #   sphinx-autodoc-typehints
     #   sphinx-rtd-theme
-sphinx-autodoc-typehints==1.17.0
+sphinx-autodoc-typehints==1.17.1
     # via -r requirements-dev.in
 sphinx-rtd-theme==1.0.0
     # via -r requirements-dev.in
@@ -247,7 +245,7 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 structlog==21.5.0
     # via bolton-logrus
-syrupy==1.7.4
+syrupy==2.0.0
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
@@ -265,7 +263,7 @@ tomli==2.0.1
     #   pylint
     #   pytest
     #   setuptools-scm
-tox==3.24.5
+tox==3.25.0
     # via
     #   -r requirements-dev.in
     #   tox-pyenv
@@ -273,9 +271,9 @@ tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.4.1
     # via cruft
-types-python-dateutil==2.8.10
+types-python-dateutil==2.8.11
     # via -r requirements-dev.in
-typing-extensions==4.1.1
+typing-extensions==4.2.0
     # via
     #   astroid
     #   black
@@ -288,7 +286,7 @@ vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.14.0
+virtualenv==20.14.1
     # via tox
 wheel==0.37.1
     # via pip-tools
@@ -300,7 +298,7 @@ zipp==3.8.0
 # The following packages are considered to be unsafe in a requirements file:
 pip==22.0.4
     # via pip-tools
-setuptools==62.0.0
+setuptools==62.1.0
     # via
     #   astroid
     #   pip-tools
