--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,11 +10,11 @@ alabaster==0.7.12
     # via sphinx
 arrow==1.2.2
     # via jinja2-time
-astroid==2.11.2
+astroid==2.11.3
     # via pylint
 attrs==21.4.0
     # via pytest
-babel==2.9.1
+babel==2.10.1
     # via sphinx
 binaryornot==0.4.4
     # via cookiecutter
@@ -72,11 +72,13 @@ cogapp==3.3.0
     # via -r requirements-dev.in
 colored==1.4.3
     # via syrupy
+commonmark==0.9.1
+    # via rich
 cookiecutter==1.7.3
     # via cruft
 coverage[toml]==6.3.2
     # via pytest-cov
-cruft[pyproject]==2.10.1
+cruft[pyproject]==2.10.2
     # via -r requirements-dev.in
 dill==0.3.4
     # via pylint
@@ -101,8 +103,6 @@ idna==3.3
     # via requests
 imagesize==1.3.0
     # via sphinx
-importlib-metadata==3.10.1
-    # via cruft
 iniconfig==1.1.1
     # via pytest
 isort==5.10.1
@@ -177,13 +177,15 @@ pydocstyle[toml]==6.1.1
     # via -r requirements-dev.in
 pyflakes==2.4.0
     # via flake8
-pygments==2.11.2
-    # via sphinx
-pylint==2.13.5
+pygments==2.12.0
+    # via
+    #   rich
+    #   sphinx
+pylint==2.13.7
     # via -r requirements-dev.in
 pyparsing==3.0.8
     # via packaging
-pytest==7.1.1
+pytest==7.1.2
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -208,6 +210,8 @@ requests==2.27.1
     # via
     #   cookiecutter
     #   sphinx
+rich==12.2.0
+    # via textual
 setuptools-scm==6.4.2
     # via -r requirements-dev.in
 six==1.16.0
@@ -249,6 +253,15 @@ syrupy==2.0.0
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
+textual==0.1.17
+    # via
+    #   -r requirements.in
+    #   greatday
+    #   textual-inputs
+textual-inputs==0.2.5
+    # via
+    #   -r requirements.in
+    #   greatday
 toml==0.10.2
     # via
     #   cruft
@@ -271,7 +284,7 @@ tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.4.1
     # via cruft
-types-python-dateutil==2.8.11
+types-python-dateutil==2.8.12
     # via -r requirements-dev.in
 typing-extensions==4.2.0
     # via
@@ -280,6 +293,7 @@ typing-extensions==4.2.0
     #   mypy
     #   pydantic
     #   pylint
+    #   rich
 urllib3==1.26.9
     # via requests
 vimala==0.1.2
@@ -292,8 +306,6 @@ wheel==0.37.1
     # via pip-tools
 wrapt==1.14.0
     # via astroid
-zipp==3.8.0
-    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 pip==22.0.4
