--- a/requirements.txt
+++ b/requirements.txt
@@ -33,21 +33,35 @@ bolton-typist==0.2.0
     #   bolton-eris
     #   magodo
     #   vimala
+commonmark==0.9.1
+    # via rich
 magodo==0.9.1
     # via -r requirements.in
 potoroo==0.3.2
     # via -r requirements.in
 pydantic==1.9.0
     # via bolton-clack
+pygments==2.12.0
+    # via rich
 python-dateutil==2.8.2
     # via -r requirements.in
 pyyaml==6.0
     # via bolton-clack
+rich==12.2.0
+    # via textual
 six==1.16.0
     # via python-dateutil
 structlog==21.5.0
     # via bolton-logrus
+textual==0.1.17
+    # via
+    #   -r requirements.in
+    #   textual-inputs
+textual-inputs==0.2.5
+    # via -r requirements.in
 typing-extensions==4.2.0
-    # via pydantic
+    # via
+    #   pydantic
+    #   rich
 vimala==0.1.2
     # via -r requirements.in
