--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -61,7 +61,7 @@ chardet==4.0.0
     # via binaryornot
 charset-normalizer==2.0.12
     # via requests
-click==8.1.2
+click==8.1.3
     # via
     #   black
     #   cookiecutter
@@ -109,7 +109,7 @@ isort==5.10.1
     # via
     #   -r requirements-dev.in
     #   pylint
-jinja2==3.1.1
+jinja2==3.1.2
     # via
     #   cookiecutter
     #   jinja2-time
@@ -132,7 +132,7 @@ mccabe==0.6.1
     #   pylint
 mistune==0.8.4
     # via m2r2
-mypy==0.942
+mypy==0.950
     # via -r requirements-dev.in
 mypy-extensions==0.4.3
     # via
@@ -200,7 +200,7 @@ python-dateutil==2.8.2
     #   -r requirements.in
     #   arrow
     #   greatday
-python-slugify==6.1.1
+python-slugify==6.1.2
     # via cookiecutter
 pytz==2022.1
     # via babel
@@ -210,7 +210,7 @@ requests==2.27.1
     # via
     #   cookiecutter
     #   sphinx
-rich==12.2.0
+rich==12.3.0
     # via textual
 setuptools-scm==6.4.2
     # via -r requirements-dev.in
@@ -253,7 +253,7 @@ syrupy==2.0.0
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
-textual==0.1.17
+textual==0.1.18
     # via
     #   -r requirements.in
     #   greatday
@@ -284,7 +284,7 @@ tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.4.1
     # via cruft
-types-python-dateutil==2.8.12
+types-python-dateutil==2.8.14
     # via -r requirements-dev.in
 typing-extensions==4.2.0
     # via
@@ -294,6 +294,7 @@ typing-extensions==4.2.0
     #   pydantic
     #   pylint
     #   rich
+    #   textual
 urllib3==1.26.9
     # via requests
 vimala==0.1.2
