--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,9 @@ python-dateutil==2.8.2
 pyyaml==6.0
     # via bolton-clack
 rich==12.3.0
-    # via textual
+    # via
+    #   -r requirements.in
+    #   textual
 six==1.16.0
     # via python-dateutil
 structlog==21.5.0
