--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ bolton-proctor==0.2.2
     # via vimala
 bolton-typist==0.2.0
     # via
+    #   -r requirements.in
     #   bolton-clack
     #   bolton-eris
     #   magodo
