--- a/setup.cfg
+++ b/setup.cfg
@@ -81,5 +81,5 @@ warn_unreachable = True
 warn_unused_configs  = True
 warn_unused_ignores  = True
 
-[mypy-pluggy.*,setuptools.*]
+[mypy-pluggy.*,setuptools.*,textual_inputs.*]
 ignore_missing_imports = True
