Update requirements: more-itertools

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ commonmark==0.9.1
     # via rich
 magodo==0.9.3
     # via -r requirements.in
+more-itertools==8.12.0
+    # via -r requirements.in
 potoroo==0.3.2
     # via -r requirements.in
 pydantic==1.9.0
