--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,7 +10,7 @@ alabaster==0.7.12
     # via sphinx
 arrow==1.2.2
     # via jinja2-time
-astroid==2.11.3
+astroid==2.11.4
     # via pylint
 attrs==21.4.0
     # via pytest
@@ -134,6 +134,10 @@ mccabe==0.6.1
     #   pylint
 mistune==0.8.4
     # via m2r2
+more-itertools==8.12.0
+    # via
+    #   -r requirements.in
+    #   greatday
 mypy==0.950
     # via -r requirements-dev.in
 mypy-extensions==0.4.3
@@ -183,7 +187,7 @@ pygments==2.12.0
     # via
     #   rich
     #   sphinx
-pylint==2.13.7
+pylint==2.13.8
     # via -r requirements-dev.in
 pyparsing==3.0.8
     # via packaging
@@ -310,7 +314,7 @@ virtualenv==20.14.1
     # via tox
 wheel==0.37.1
     # via pip-tools
-wrapt==1.14.0
+wrapt==1.14.1
     # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
