--- a/requirements.in
+++ b/requirements.in
@@ -3,6 +3,7 @@ bolton-ion ~= 0.1.0
 bolton-logrus ~= 0.1.0
 bolton-typist ~= 0.2.0
 magodo ~= 0.9.3
+more-itertools ~= 8.12
 potoroo ~= 0.3.2
 python-dateutil ~= 2.8
 rich ~= 12.3
