--- a/requirements.txt
+++ b/requirements.txt
@@ -35,12 +35,16 @@ bolton-typist==0.2.0
     #   vimala
 commonmark==0.9.1
     # via rich
+greenlet==1.1.2
+    # via sqlalchemy
 magodo==0.10.0
     # via -r requirements.in
 potoroo==0.3.2
     # via -r requirements.in
 pydantic==1.9.1
-    # via bolton-clack
+    # via
+    #   bolton-clack
+    #   sqlmodel
 pygments==2.12.0
     # via rich
 python-dateutil==2.8.2
@@ -53,6 +57,12 @@ rich==12.4.4
     #   textual
 six==1.16.0
     # via python-dateutil
+sqlalchemy==1.4.37
+    # via sqlmodel
+sqlalchemy2-stubs==0.0.2a22
+    # via sqlmodel
+sqlmodel==0.0.6
+    # via -r requirements.in
 structlog==21.5.0
     # via bolton-logrus
 textual==0.1.18
@@ -65,6 +75,7 @@ typing-extensions==4.2.0
     # via
     #   pydantic
     #   rich
+    #   sqlalchemy2-stubs
     #   textual
 vimala==0.1.2
     # via -r requirements.in
