bug: Add sqlalchemy constraint to fix relationships

--- a/requirements.in
+++ b/requirements.in
@@ -10,3 +10,6 @@ sqlmodel ~= 0.0.6
 textual ~= 0.1.17
 textual-inputs ~= 0.2.5
 vimala ~= 0.1.2
+
+# constraints
+sqlalchemy == 1.4.35  # see https://github.com/tiangolo/sqlmodel/issues/315
