Update requirements: sqlalchemy

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -255,8 +255,11 @@ sphinxcontrib-qthelp==1.0.3
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
-sqlalchemy==1.4.37
-    # via sqlmodel
+sqlalchemy==1.4.35
+    # via
+    #   -r requirements.in
+    #   greatday
+    #   sqlmodel
 sqlalchemy2-stubs==0.0.2a22
     # via sqlmodel
 sqlmodel==0.0.6
