--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,7 @@
 bolton-clack ~= 0.3.3
 bolton-eris ~= 0.2.3
 bolton-logrus ~= 0.1.0
+bolton-metaman ~= 0.1.2
 bolton-typist ~= 0.2.0
 magodo ~= 0.10.1
 potoroo ~= 0.4.1
