--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,9 @@ bolton-logrus==0.1.0
     # via
     #   -r requirements.in
     #   bolton-clack
-bolton-metaman==0.1.1
+bolton-metaman==0.1.2
     # via
+    #   -r requirements.in
     #   bolton-eris
     #   bolton-logrus
     #   magodo
