--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,7 +10,7 @@ alabaster==0.7.12
     # via sphinx
 arrow==1.2.2
     # via jinja2-time
-astroid==2.11.6
+astroid==2.11.7
     # via pylint
 attrs==21.4.0
     # via pytest
@@ -18,7 +18,7 @@ babel==2.10.3
     # via sphinx
 binaryornot==0.4.4
     # via cookiecutter
-black==22.3.0
+black==22.6.0
     # via -r requirements-dev.in
 bolton-clack==0.3.4
     # via
@@ -56,13 +56,15 @@ bolton-typist==0.2.0
     #   greatday
     #   magodo
     #   vimala
+build==0.8.0
+    # via pip-tools
 bump2version==1.0.1
     # via -r requirements-dev.in
 certifi==2022.6.15
     # via requests
-chardet==4.0.0
+chardet==5.0.0
     # via binaryornot
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via requests
 click==8.1.3
     # via
@@ -79,13 +81,13 @@ commonmark==0.9.1
     # via rich
 cookiecutter==1.7.3
     # via cruft
-coverage[toml]==6.4.1
+coverage[toml]==6.4.2
     # via pytest-cov
 cruft[pyproject]==2.10.2
     # via -r requirements-dev.in
 dill==0.3.5.1
     # via pylint
-distlib==0.3.4
+distlib==0.3.5
     # via virtualenv
 docutils==0.17.1
     # via
@@ -108,7 +110,7 @@ greenlet==1.1.2
     # via sqlalchemy
 idna==3.3
     # via requests
-imagesize==1.3.0
+imagesize==1.4.1
     # via sphinx
 iniconfig==1.1.1
     # via pytest
@@ -147,6 +149,7 @@ mypy-extensions==0.4.3
     #   mypy
 packaging==21.3
     # via
+    #   build
     #   pytest
     #   setuptools-scm
     #   sphinx
@@ -154,8 +157,8 @@ packaging==21.3
 pathspec==0.9.0
     # via black
 pep517==0.12.0
-    # via pip-tools
-pip-tools==6.6.2
+    # via build
+pip-tools==6.8.0
     # via -r requirements-dev.in
 platformdirs==2.5.2
     # via
@@ -190,7 +193,7 @@ pygments==2.12.0
     # via
     #   rich
     #   sphinx
-pylint==2.14.3
+pylint==2.14.4
     # via -r requirements-dev.in
 pyparsing==3.0.9
     # via packaging
@@ -202,7 +205,7 @@ pytest==7.1.2
     #   syrupy
 pytest-cov==3.0.0
     # via -r requirements-dev.in
-pytest-mock==3.7.0
+pytest-mock==3.8.2
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
@@ -215,16 +218,16 @@ pytz==2022.1
     # via babel
 pyyaml==6.0
     # via bolton-clack
-requests==2.28.0
+requests==2.28.1
     # via
     #   cookiecutter
     #   sphinx
-rich==12.4.4
+rich==12.5.1
     # via
     #   -r requirements.in
     #   greatday
     #   textual
-setuptools-scm==6.4.2
+setuptools-scm==7.0.5
     # via -r requirements-dev.in
 six==1.16.0
     # via
@@ -272,7 +275,7 @@ sqlmodel==0.0.6
     #   greatday
 structlog==21.5.0
     # via bolton-logrus
-syrupy==2.3.0
+syrupy==2.3.1
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
@@ -293,25 +296,26 @@ toml==0.10.2
 tomli==2.0.1
     # via
     #   black
+    #   build
     #   coverage
     #   mypy
     #   pep517
     #   pylint
     #   pytest
     #   setuptools-scm
-tomlkit==0.11.0
+tomlkit==0.11.1
     # via pylint
-tox==3.25.0
+tox==3.25.1
     # via
     #   -r requirements-dev.in
     #   tox-pyenv
 tox-pyenv==1.1.0
     # via -r requirements-dev.in
-typer==0.4.1
+typer==0.4.2
     # via cruft
-types-python-dateutil==2.8.17
+types-python-dateutil==2.8.18
     # via -r requirements-dev.in
-typing-extensions==4.2.0
+typing-extensions==4.3.0
     # via
     #   astroid
     #   black
@@ -319,15 +323,16 @@ typing-extensions==4.2.0
     #   pydantic
     #   pylint
     #   rich
+    #   setuptools-scm
     #   sqlalchemy2-stubs
     #   textual
-urllib3==1.26.9
+urllib3==1.26.10
     # via requests
 vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.14.1
+virtualenv==20.15.1
     # via tox
 wheel==0.37.1
     # via pip-tools
@@ -337,7 +342,7 @@ wrapt==1.14.1
 # The following packages are considered to be unsafe in a requirements file:
 pip==22.1.2
     # via pip-tools
-setuptools==62.5.0
+setuptools==63.2.0
     # via
     #   astroid
     #   pip-tools
