--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,7 +12,7 @@ arrow==1.2.2
     # via jinja2-time
 astroid==2.11.7
     # via pylint
-attrs==21.4.0
+attrs==22.1.0
     # via pytest
 babel==2.10.3
     # via sphinx
@@ -79,11 +79,11 @@ colored==1.4.3
     # via syrupy
 commonmark==0.9.1
     # via rich
-cookiecutter==1.7.3
+cookiecutter==2.1.1
     # via cruft
 coverage[toml]==6.4.2
     # via pytest-cov
-cruft[pyproject]==2.10.2
+cruft[pyproject]==2.11.0
     # via -r requirements-dev.in
 dill==0.3.5.1
     # via pylint
@@ -156,7 +156,7 @@ packaging==21.3
     #   tox
 pathspec==0.9.0
     # via black
-pep517==0.12.0
+pep517==0.13.0
     # via build
 pip-tools==6.8.0
     # via -r requirements-dev.in
@@ -173,8 +173,6 @@ potoroo==0.4.1
     # via
     #   -r requirements.in
     #   greatday
-poyo==0.5.0
-    # via cookiecutter
 py==1.11.0
     # via
     #   pytest
@@ -217,7 +215,9 @@ python-slugify==6.1.2
 pytz==2022.1
     # via babel
 pyyaml==6.0
-    # via bolton-clack
+    # via
+    #   bolton-clack
+    #   cookiecutter
 requests==2.28.1
     # via
     #   cookiecutter
@@ -231,10 +231,8 @@ setuptools-scm==7.0.5
     # via -r requirements-dev.in
 six==1.16.0
     # via
-    #   cookiecutter
     #   python-dateutil
     #   tox
-    #   virtualenv
 smmap==5.0.0
     # via gitdb
 snowballstemmer==2.2.0
@@ -311,7 +309,7 @@ tox==3.25.1
     #   tox-pyenv
 tox-pyenv==1.1.0
     # via -r requirements-dev.in
-typer==0.4.2
+typer==0.6.1
     # via cruft
 types-python-dateutil==2.8.19
     # via -r requirements-dev.in
@@ -326,13 +324,13 @@ typing-extensions==4.3.0
     #   setuptools-scm
     #   sqlalchemy2-stubs
     #   textual
-urllib3==1.26.10
+urllib3==1.26.11
     # via requests
 vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.15.1
+virtualenv==20.16.2
     # via tox
 wheel==0.37.1
     # via pip-tools
@@ -340,7 +338,7 @@ wrapt==1.14.1
     # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
-pip==22.2
+pip==22.2.1
     # via pip-tools
 setuptools==63.2.0
     # via
