--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,15 +10,15 @@ alabaster==0.7.12
     # via sphinx
 arrow==1.2.3
     # via jinja2-time
-astroid==2.12.10
+astroid==2.12.12
     # via pylint
 attrs==22.1.0
     # via pytest
-babel==2.10.3
+babel==2.11.0
     # via sphinx
 binaryornot==0.4.4
     # via cookiecutter
-black==22.8.0
+black==22.10.0
     # via -r requirements-dev.in
 bolton-clack==0.3.4
     # via
@@ -56,11 +56,11 @@ bolton-typist==0.2.0
     #   greatday
     #   magodo
     #   vimala
-build==0.8.0
+build==0.9.0
     # via pip-tools
 bump2version==1.0.1
     # via -r requirements-dev.in
-certifi==2022.9.14
+certifi==2022.9.24
     # via requests
 chardet==5.0.0
     # via binaryornot
@@ -75,17 +75,17 @@ click==8.1.3
     #   typer
 cogapp==3.3.0
     # via -r requirements-dev.in
-colored==1.4.3
+colored==1.4.4
     # via syrupy
 commonmark==0.9.1
     # via rich
 cookiecutter==2.1.1
     # via cruft
-coverage[toml]==6.4.4
+coverage[toml]==6.5.0
     # via pytest-cov
 cruft[pyproject]==2.11.1
     # via -r requirements-dev.in
-dill==0.3.5.1
+dill==0.3.6
     # via pylint
 distlib==0.3.6
     # via virtualenv
@@ -94,6 +94,8 @@ docutils==0.17.1
     #   m2r2
     #   sphinx
     #   sphinx-rtd-theme
+exceptiongroup==1.0.1
+    # via pytest
 filelock==3.8.0
     # via
     #   tox
@@ -104,9 +106,9 @@ freezegun==1.2.2
     # via -r requirements-dev.in
 gitdb==4.0.9
     # via gitpython
-gitpython==3.1.27
+gitpython==3.1.29
     # via cruft
-greenlet==1.1.3
+greenlet==2.0.1
     # via sqlalchemy
 idna==3.4
     # via requests
@@ -125,7 +127,7 @@ jinja2==3.1.2
     #   sphinx
 jinja2-time==0.2.0
     # via cookiecutter
-lazy-object-proxy==1.7.1
+lazy-object-proxy==1.8.0
     # via astroid
 m2r2==0.3.2
     # via -r requirements-dev.in
@@ -141,7 +143,7 @@ mccabe==0.7.0
     #   pylint
 mistune==0.8.4
     # via m2r2
-mypy==0.971
+mypy==0.990
     # via -r requirements-dev.in
 mypy-extensions==0.4.3
     # via
@@ -158,9 +160,9 @@ pathspec==0.10.1
     # via black
 pep517==0.13.0
     # via build
-pip-tools==6.8.0
+pip-tools==6.9.0
     # via -r requirements-dev.in
-platformdirs==2.5.2
+platformdirs==2.5.3
     # via
     #   black
     #   pylint
@@ -174,9 +176,7 @@ potoroo==0.4.1
     #   -r requirements.in
     #   greatday
 py==1.11.0
-    # via
-    #   pytest
-    #   tox
+    # via tox
 pycodestyle==2.9.1
     # via flake8
 pydantic==1.10.2
@@ -191,19 +191,19 @@ pygments==2.13.0
     # via
     #   rich
     #   sphinx
-pylint==2.15.2
+pylint==2.15.5
     # via -r requirements-dev.in
 pyparsing==3.0.9
     # via packaging
-pytest==7.1.3
+pytest==7.2.0
     # via
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-mock
     #   syrupy
-pytest-cov==3.0.0
+pytest-cov==4.0.0
     # via -r requirements-dev.in
-pytest-mock==3.8.2
+pytest-mock==3.10.0
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
@@ -212,7 +212,7 @@ python-dateutil==2.8.2
     #   greatday
 python-slugify==6.1.2
     # via cookiecutter
-pytz==2022.2.1
+pytz==2022.6
     # via babel
 pyyaml==6.0
     # via
@@ -222,7 +222,7 @@ requests==2.28.1
     # via
     #   cookiecutter
     #   sphinx
-rich==12.5.1
+rich==12.6.0
     # via
     #   -r requirements.in
     #   greatday
@@ -246,7 +246,7 @@ sphinx==4.3.2
     #   sphinx-rtd-theme
 sphinx-autodoc-typehints==1.17.1
     # via -r requirements-dev.in
-sphinx-rtd-theme==1.0.0
+sphinx-rtd-theme==1.1.1
     # via -r requirements-dev.in
 sphinxcontrib-applehelp==1.0.2
     # via sphinx
@@ -265,7 +265,7 @@ sqlalchemy==1.4.35
     #   -r requirements.in
     #   greatday
     #   sqlmodel
-sqlalchemy2-stubs==0.0.2a27
+sqlalchemy2-stubs==0.0.2a29
     # via sqlmodel
 sqlmodel==0.0.8
     # via
@@ -273,7 +273,7 @@ sqlmodel==0.0.8
     #   greatday
 structlog==22.1.0
     # via bolton-logrus
-syrupy==3.0.0
+syrupy==3.0.5
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
@@ -301,9 +301,9 @@ tomli==2.0.1
     #   pytest
     #   setuptools-scm
     #   tox
-tomlkit==0.11.4
+tomlkit==0.11.6
     # via pylint
-tox==3.26.0
+tox==3.27.0
     # via
     #   -r requirements-dev.in
     #   tox-pyenv
@@ -311,9 +311,9 @@ tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.6.1
     # via cruft
-types-python-dateutil==2.8.19
+types-python-dateutil==2.8.19.3
     # via -r requirements-dev.in
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via
     #   astroid
     #   black
@@ -330,17 +330,17 @@ vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.16.5
+virtualenv==20.16.6
     # via tox
-wheel==0.37.1
+wheel==0.38.4
     # via pip-tools
 wrapt==1.14.1
     # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
-pip==22.2.2
+pip==22.3.1
     # via pip-tools
-setuptools==65.3.0
+setuptools==65.5.1
     # via
     #   pip-tools
     #   setuptools-scm
