--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,14 +6,22 @@
 #
 -e file:.#egg=greatday>=0.dev
     # via -r requirements-dev.in
+aiohttp==3.8.4
+    # via textual
+aiosignal==1.3.1
+    # via aiohttp
 alabaster==0.7.13
     # via sphinx
 arrow==1.2.3
     # via jinja2-time
 astroid==2.14.2
     # via pylint
+async-timeout==4.0.2
+    # via aiohttp
 attrs==22.2.0
-    # via pytest
+    # via
+    #   aiohttp
+    #   pytest
 babel==2.11.0
     # via sphinx
 binaryornot==0.4.4
@@ -69,13 +77,17 @@ chardet==5.1.0
     #   binaryornot
     #   tox
 charset-normalizer==3.0.1
-    # via requests
+    # via
+    #   aiohttp
+    #   requests
 click==8.1.3
     # via
     #   black
     #   cookiecutter
     #   cruft
+    #   mkdocs
     #   pip-tools
+    #   textual
     #   typer
 cogapp==3.3.0
     # via -r requirements-dev.in
@@ -83,8 +95,6 @@ colorama==0.4.6
     # via tox
 colored==1.4.4
     # via syrupy
-commonmark==0.9.1
-    # via rich
 cookiecutter==2.1.1
     # via cruft
 coverage[toml]==7.1.0
@@ -110,6 +120,12 @@ flake8==6.0.0
     # via -r requirements-dev.in
 freezegun==1.2.2
     # via -r requirements-dev.in
+frozenlist==1.3.3
+    # via
+    #   aiohttp
+    #   aiosignal
+ghp-import==2.1.0
+    # via mkdocs
 gitdb==4.0.10
     # via gitpython
 gitpython==3.1.31
@@ -117,9 +133,16 @@ gitpython==3.1.31
 greenlet==2.0.2
     # via sqlalchemy
 idna==3.4
-    # via requests
+    # via
+    #   requests
+    #   yarl
 imagesize==1.4.1
     # via sphinx
+importlib-metadata==4.13.0
+    # via
+    #   markdown
+    #   mkdocs
+    #   textual
 iniconfig==2.0.0
     # via pytest
 isort==5.12.0
@@ -130,25 +153,51 @@ jinja2==3.1.2
     # via
     #   cookiecutter
     #   jinja2-time
+    #   mkdocs
     #   sphinx
 jinja2-time==0.2.0
     # via cookiecutter
 lazy-object-proxy==1.9.0
     # via astroid
+linkify-it-py==1.0.3
+    # via markdown-it-py
 m2r2==0.3.2
     # via -r requirements-dev.in
 magodo==1.1.1
     # via
     #   -r requirements.in
     #   greatday
+markdown==3.3.7
+    # via mkdocs
+markdown-it-py[linkify,plugins]==2.1.0
+    # via
+    #   mdit-py-plugins
+    #   rich
+    #   textual
 markupsafe==2.1.2
     # via jinja2
 mccabe==0.7.0
     # via
     #   flake8
     #   pylint
+mdit-py-plugins==0.3.3
+    # via markdown-it-py
+mdurl==0.1.2
+    # via markdown-it-py
+mergedeep==1.3.4
+    # via mkdocs
 mistune==0.8.4
     # via m2r2
+mkdocs==1.4.2
+    # via mkdocs-exclude
+mkdocs-exclude==1.0.2
+    # via textual
+msgpack==1.0.4
+    # via textual
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
 mypy==1.0.1
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
@@ -159,6 +208,7 @@ packaging==23.0
     # via
     #   black
     #   build
+    #   mkdocs
     #   pyproject-api
     #   pytest
     #   setuptools-scm
@@ -217,6 +267,7 @@ python-dateutil==2.8.2
     #   -r requirements.in
     #   arrow
     #   freezegun
+    #   ghp-import
     #   greatday
 python-slugify==8.0.0
     # via cookiecutter
@@ -226,15 +277,16 @@ pyyaml==6.0
     # via
     #   bolton-clack
     #   cookiecutter
+    #   mkdocs
+    #   pyyaml-env-tag
+pyyaml-env-tag==0.1
+    # via mkdocs
 requests==2.28.2
     # via
     #   cookiecutter
     #   sphinx
-rich==12.6.0
-    # via
-    #   -r requirements.in
-    #   greatday
-    #   textual
+rich==13.3.1
+    # via textual
 setuptools-scm==7.1.0
     # via -r requirements-dev.in
 six==1.16.0
@@ -285,12 +337,7 @@ syrupy==4.0.0
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
-textual[dev]==0.1.18
-    # via
-    #   -r requirements.in
-    #   greatday
-    #   textual-inputs
-textual-inputs==0.2.6
+textual[dev]==0.11.1
     # via
     #   -r requirements.in
     #   greatday
@@ -332,6 +379,8 @@ typing-extensions==4.5.0
     #   setuptools-scm
     #   sqlalchemy2-stubs
     #   textual
+uc-micro-py==1.0.1
+    # via linkify-it-py
 urllib3==1.26.14
     # via requests
 vimala==0.1.2
@@ -340,10 +389,16 @@ vimala==0.1.2
     #   greatday
 virtualenv==20.19.0
     # via tox
+watchdog==2.2.1
+    # via mkdocs
 wheel==0.38.4
     # via pip-tools
 wrapt==1.14.1
     # via astroid
+yarl==1.8.2
+    # via aiohttp
+zipp==3.14.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 pip==23.0.1
