--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,14 @@
 #
 #    "make update-requirements"
 #
+aiohttp==3.8.4
+    # via textual
+aiosignal==1.3.1
+    # via aiohttp
+async-timeout==4.0.2
+    # via aiohttp
+attrs==22.2.0
+    # via aiohttp
 bolton-clack==0.3.4
     # via -r requirements.in
 bolton-eris==0.2.3
@@ -34,12 +42,60 @@ bolton-typist==0.2.0
     #   bolton-eris
     #   magodo
     #   vimala
-commonmark==0.9.1
-    # via rich
+charset-normalizer==3.0.1
+    # via aiohttp
+click==8.1.3
+    # via
+    #   mkdocs
+    #   textual
+frozenlist==1.3.3
+    # via
+    #   aiohttp
+    #   aiosignal
+ghp-import==2.1.0
+    # via mkdocs
 greenlet==2.0.2
     # via sqlalchemy
+idna==3.4
+    # via yarl
+importlib-metadata==4.13.0
+    # via
+    #   markdown
+    #   mkdocs
+    #   textual
+jinja2==3.1.2
+    # via mkdocs
+linkify-it-py==1.0.3
+    # via markdown-it-py
 magodo==1.1.1
     # via -r requirements.in
+markdown==3.3.7
+    # via mkdocs
+markdown-it-py[linkify,plugins]==2.1.0
+    # via
+    #   mdit-py-plugins
+    #   rich
+    #   textual
+markupsafe==2.1.2
+    # via jinja2
+mdit-py-plugins==0.3.3
+    # via markdown-it-py
+mdurl==0.1.2
+    # via markdown-it-py
+mergedeep==1.3.4
+    # via mkdocs
+mkdocs==1.4.2
+    # via mkdocs-exclude
+mkdocs-exclude==1.0.2
+    # via textual
+msgpack==1.0.4
+    # via textual
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
+packaging==23.0
+    # via mkdocs
 potoroo==0.4.1
     # via -r requirements.in
 pydantic==1.10.5
@@ -49,13 +105,18 @@ pydantic==1.10.5
 pygments==2.14.0
     # via rich
 python-dateutil==2.8.2
-    # via -r requirements.in
-pyyaml==6.0
-    # via bolton-clack
-rich==12.6.0
     # via
     #   -r requirements.in
-    #   textual
+    #   ghp-import
+pyyaml==6.0
+    # via
+    #   bolton-clack
+    #   mkdocs
+    #   pyyaml-env-tag
+pyyaml-env-tag==0.1
+    # via mkdocs
+rich==13.3.1
+    # via textual
 six==1.16.0
     # via python-dateutil
 sqlalchemy==1.4.35
@@ -68,11 +129,7 @@ sqlmodel==0.0.8
     # via -r requirements.in
 structlog==22.3.0
     # via bolton-logrus
-textual[dev]==0.1.18
-    # via
-    #   -r requirements.in
-    #   textual-inputs
-textual-inputs==0.2.6
+textual[dev]==0.11.1
     # via -r requirements.in
 typing-extensions==4.5.0
     # via
@@ -80,5 +137,13 @@ typing-extensions==4.5.0
     #   rich
     #   sqlalchemy2-stubs
     #   textual
+uc-micro-py==1.0.1
+    # via linkify-it-py
 vimala==0.1.2
     # via -r requirements.in
+watchdog==2.2.1
+    # via mkdocs
+yarl==1.8.2
+    # via aiohttp
+zipp==3.14.0
+    # via importlib-metadata
