--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -4,7 +4,8 @@ pytest
 pytest-cov
 pytest-mock
 syrupy
-tox
+tox < 4  # workaround for github.com/tox-dev/tox-pyenv/issues/21
+tox-pyenv
 -e file:.#egg=greatday>=0.dev
 
 ### Lint
@@ -12,7 +13,7 @@ black
 cogapp ~= 3.3
 flake8
 isort
-mypy != 0.920, != 0.921, != 0.930  # workaround for https://github.com/samuelcolvin/pydantic/pull/3175
+mypy != 0.920, != 0.921, != 0.930  # workaround for github.com/samuelcolvin/pydantic/pull/3175
 pydocstyle[toml]
 pylint
 
@@ -20,7 +21,7 @@ pylint
 types-python-dateutil
 
 ### Docs
-m2r2 != 0.3.3.*  # since this version requires docutils>=0.19 (see https://github.com/CrossNox/m2r2/compare/v0.3.2...v0.3.3)
+m2r2 != 0.3.3.*  # since this version requires docutils>=0.19 (see github.com/CrossNox/m2r2/compare/v0.3.2...v0.3.3)
 sphinx ~= 4.3.1  # ATTOW, 'sphinx>=4.4.0' requires a 'importlib-metadata' version that conflicts with what 'cruft' requires.
 sphinx-rtd-theme
 sphinx-autodoc-typehints ~= 1.17.1  # since >=1.18 requires sphinx >=4.5
