--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -68,14 +68,10 @@ build==0.10.0
     # via pip-tools
 bump2version==1.0.1
     # via -r requirements-dev.in
-cachetools==5.3.0
-    # via tox
 certifi==2022.12.7
     # via requests
 chardet==5.1.0
-    # via
-    #   binaryornot
-    #   tox
+    # via binaryornot
 charset-normalizer==3.1.0
     # via
     #   aiohttp
@@ -91,8 +87,6 @@ click==8.1.3
     #   typer
 cogapp==3.3.0
     # via -r requirements-dev.in
-colorama==0.4.6
-    # via tox
 colored==1.4.4
     # via syrupy
 cookiecutter==2.1.1
@@ -209,7 +203,6 @@ packaging==23.0
     #   black
     #   build
     #   mkdocs
-    #   pyproject-api
     #   pytest
     #   setuptools-scm
     #   sphinx
@@ -222,7 +215,6 @@ platformdirs==3.1.1
     # via
     #   black
     #   pylint
-    #   tox
     #   virtualenv
 pluggy==1.0.0
     # via
@@ -232,6 +224,8 @@ potoroo==0.4.1
     # via
     #   -r requirements.in
     #   greatday
+py==1.11.0
+    # via tox
 pycodestyle==2.10.0
     # via flake8
 pydantic==1.10.6
@@ -248,8 +242,6 @@ pygments==2.14.0
     #   sphinx
 pylint==2.17.0
     # via -r requirements-dev.in
-pyproject-api==1.5.0
-    # via tox
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.2
@@ -290,7 +282,9 @@ rich==13.3.2
 setuptools-scm==7.1.0
     # via -r requirements-dev.in
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   python-dateutil
+    #   tox
 smmap==5.0.0
     # via gitdb
 snowballstemmer==2.2.0
@@ -351,14 +345,17 @@ tomli==2.0.1
     #   mypy
     #   pydocstyle
     #   pylint
-    #   pyproject-api
     #   pyproject-hooks
     #   pytest
     #   setuptools-scm
     #   tox
 tomlkit==0.11.6
     # via pylint
-tox==4.4.6
+tox==3.28.0
+    # via
+    #   -r requirements-dev.in
+    #   tox-pyenv
+tox-pyenv==1.1.0
     # via -r requirements-dev.in
 typer==0.7.0
     # via cruft
